--- a/You Are Awesome!/Base.lproj/Main.storyboard
+++ b/You Are Awesome!/Base.lproj/Main.storyboard
@@ -6,13 +6,14 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="You_Are_Awesome_" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController hidesBottomBarWhenPushed="YES" id="BYZ-38-t0r" customClass="ViewController" customModule="You_Are_Awesome_" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -21,41 +22,58 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Zl-5x-i1c">
-                                <rect key="frame" x="16" y="28" width="344" height="123"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Zl-5x-i1c">
+                                <rect key="frame" x="16" y="28" width="343" height="123"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="123" id="I8l-Ki-cO1"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
                                 <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Csp-VX-WUg">
-                                <rect key="frame" x="235" y="190" width="104" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Csp-VX-WUg">
+                                <rect key="frame" x="255" y="190" width="104" height="30"/>
                                 <state key="normal" title="Show Message"/>
                                 <connections>
                                     <action selector="messageButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ZHg-Sp-7rB"/>
                                 </connections>
                             </button>
-                            <imageView hidden="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="image0" translatesAutoresizingMaskIntoConstraints="NO" id="rob-A0-7w0">
-                                <rect key="frame" x="16" y="255" width="344" height="358"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Kan-nx-ZqP">
-                                <rect key="frame" x="117" y="189" width="51" height="31"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <connections>
-                                    <action selector="soundSwitchPressed:" destination="BYZ-38-t0r" eventType="valueChanged" id="lWO-Xm-ljp"/>
-                                </connections>
-                            </switch>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Play Sound:" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aw4-12-Q8H">
-                                <rect key="frame" x="16" y="194" width="91" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Play Sound:" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aw4-12-Q8H">
+                                <rect key="frame" x="16" y="197" width="91" height="18"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="91" id="el6-Jk-a5g"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Kan-nx-ZqP">
+                                <rect key="frame" x="115" y="190" width="51" height="31"/>
+                                <connections>
+                                    <action selector="soundSwitchPressed:" destination="BYZ-38-t0r" eventType="valueChanged" id="lWO-Xm-ljp"/>
+                                </connections>
+                            </switch>
+                            <imageView hidden="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image0" translatesAutoresizingMaskIntoConstraints="NO" id="rob-A0-7w0">
+                                <rect key="frame" x="16" y="251" width="343" height="358"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="rob-A0-7w0" firstAttribute="top" secondItem="Kan-nx-ZqP" secondAttribute="bottom" constant="30" id="4dC-6g-4L8"/>
+                            <constraint firstItem="0Zl-5x-i1c" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="6IN-HY-AMF"/>
+                            <constraint firstItem="0Zl-5x-i1c" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" symbolic="YES" id="Ci1-IB-TbD"/>
+                            <constraint firstItem="Kan-nx-ZqP" firstAttribute="leading" secondItem="aw4-12-Q8H" secondAttribute="trailing" constant="8" symbolic="YES" id="E7T-f7-SvP"/>
+                            <constraint firstItem="Kan-nx-ZqP" firstAttribute="centerY" secondItem="Csp-VX-WUg" secondAttribute="centerY" id="FDM-co-SLq"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="rob-A0-7w0" secondAttribute="bottom" constant="58" id="FkE-ew-4pI"/>
+                            <constraint firstItem="0Zl-5x-i1c" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="K3B-oa-qFY"/>
+                            <constraint firstItem="aw4-12-Q8H" firstAttribute="centerY" secondItem="Kan-nx-ZqP" secondAttribute="centerY" id="NWd-AA-iFA"/>
+                            <constraint firstItem="0Zl-5x-i1c" firstAttribute="trailing" secondItem="Csp-VX-WUg" secondAttribute="trailing" id="Vnn-p8-4Qq"/>
+                            <constraint firstItem="Kan-nx-ZqP" firstAttribute="top" secondItem="Csp-VX-WUg" secondAttribute="top" id="gf3-jS-Kuf"/>
+                            <constraint firstItem="aw4-12-Q8H" firstAttribute="leading" secondItem="rob-A0-7w0" secondAttribute="leading" id="lbq-HS-ghU"/>
+                            <constraint firstItem="Kan-nx-ZqP" firstAttribute="top" secondItem="0Zl-5x-i1c" secondAttribute="bottom" constant="39" id="lvk-J1-Fcc"/>
+                            <constraint firstItem="0Zl-5x-i1c" firstAttribute="leading" secondItem="aw4-12-Q8H" secondAttribute="leading" id="oYK-oW-Nzf"/>
+                            <constraint firstItem="Csp-VX-WUg" firstAttribute="trailing" secondItem="rob-A0-7w0" secondAttribute="trailing" id="xmE-xt-EEk"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="awesomeImage" destination="rob-A0-7w0" id="Beb-uX-fiG"/>
